# simulator

./: CMakeLists.txt  package.xml
launch/: aerial_model_ign_spawn.launch.py  ign.launch.py  launcher.launch.py
meshes/: arm_1_link.STL  arm_2_link.STL  arm_3_link.STL  arm_4_link.STL  gripper_left_link.STL  gripper_right_link.STL  prop_1_link.STL  prop_2_link.STL  prop_3_link.STL  prop_4_link.STL  prop_5_link.STL  prop_6_link.STL
scripts/: gazebo_manipulator_kinematics_plugin.cpp  ros_dynamics.cpp  ros_kinematic.cpp  ros_kinematic_dev_only_message.cpp  ros_kinematic_uav.cpp  ros_kinematic_vel_obs.cpp  ros_kinematic_vel_uam.cpp  ros_kinematic_vel_uav.cpp  ros_manipulator.cpp  ros_pid.cpp
scripts/libraries/: C_matrix.cpp
urdf/: model.config  model.sdf  model.urdf  model.xacro  model_camera.config  model_camera.sdf  parrot_bebop.urdf.xacro  parrot_bebop.xacro
